<resources>
    <string name="isw_app_name">Finca</string>
    <string name="isw_title_activity_ussd">UssdActivity</string>
    <string name="isw_title_choose_payment">Choose a payment option</string>
    <string name="isw_title_choose_category">Choose category</string>
    <string name="isw_title_card">Card</string>
    <string name="isw_title_ussd">USSD</string>
    <string name="isw_title_qr_code">QR Code</string>
    <string name="isw_title_pay_code">Pay Code</string>
    <string name="isw_description_qr_code_image">QR Code Image</string>
    <string name="isw_title_generating_code">Generating Code</string>
    <string name="isw_title_loading">Loading…</string>
    <string name="isw_title_get_bank_code">get bank code</string>
    <string name="isw_title_print_receipt">Print Customer Receipt</string>
    <string name="isw_title_print_receipt_agent">Print Merchant and Customer Receipt</string>
    <string name="isw_title_transaction_approved">Transaction Approved</string>
    <string name="isw_title_transaction_in_progress">Transaction in Progress</string>
    <string name="isw_sub_title_processing_progress">Processing transaction…</string>
    <string name="isw_sub_title_checking_transaction_status">Checking payment status…</string>
    <string name="isw_title_transaction_successful">Transaction Successful</string>
    <string name="isw_title_transaction_completed_successfully">Transaction completed successfully</string>
    <string name="isw_title_transaction_not_confirmed">Transaction not confirmed</string>
    <string name="isw_content_transaction_not_confirmed">Unable to confirm transaction, please try again later</string>
    <string name="isw_title_transaction_error">Transaction Error</string>
    <string name="isw_title_transaction_timeout">Confirmation in Progress</string>
    <string name="isw_content_transaction_in_progress_time_out">Your transaction is still processing, please wait.
    </string>
    <string name="isw_label_insert_card">Insert your card</string>
    <string name="isw_enter_pin">Enter Pin</string>
    <string name="isw_action_cancel">Cancel</string>
    <string name="isw_action_change_payment">Change Payment</string>
    <string name="isw_amount">%1$s</string>
    <string name="isw_currency_amount">₦ %1$s</string>
    <string name="isw_hint_qr_code">Please scan QR code to pay using your banking app</string>
    <string name="isw_hint_transaction_success">Your transaction was successful</string>
    <string name="isw_action_close">Close</string>
    <string name="isw_hint_account_type">Select account type</string>
    <string name="isw_title_savings">Savings</string>
    <string name="isw_title_current">Current</string>
    <string name="isw_action_download_all">Download All</string>
    <string name="isw_title_downloading_keys">Downloading Keys…</string>
    <string name="isw_title_date">downloaded: %1s</string>
    <string name="isw_title_download_terminal_configuration">Download Terminal Configuration</string>
    <string name="isw_title_download_keys">Download Keys</string>
    <string name="isw_title_terminal_config_downloaded">Terminal Config Donwloaded</string>
    <string name="isw_title_keys_downloaded">Keys Downloaded</string>
    <string name="isw_title_terminal_id">Terminal ID</string>
    <string name="isw_title_error_downloading_terminal_config">Error Downloading Terminal Configuration</string>
    <string name="isw_title_error_downloading_agent_id">Error Downloading Agent Id</string>
    <string name="isw_title_error_downloading_keys">Error downloading keys</string>
    <string name="isw_title_downloading_terminal_config">Downloading Terminal Config</string>
    <string name="isw_title_downloading_agent_id">Downloading Agent Id</string>
    <string name="isw_title_help">Help</string>
    <string name="isw_title_merchant_info">Merchant Info</string>
    <string name="isw_title_setting">Settings</string>
    <string name="isw_title_reports">Reports</string>
    <string name="isw_title_history">History</string>
    <string name="isw_label_transaction">Transactions</string>
    <string name="isw_label_menu">MENU</string>
    <string name="isw_label_app_title">SmartPOS</string>
    <string name="isw_select_bank">Select Bank</string>
    <string name="isw_receiving_payment">Receiving Payment</string>
    <string name="isw_currency_naira">₦</string>
    <string name="isw_dummy_price">678,910.99</string>
    <string name="isw_dummy_ussd">*888*765*98#</string>
    <string name="isw_pay_ussd_instruction">Dial the USSD code on your Mobile phone to pay</string>
    <string name="isw_title_status">Status</string>
    <string name="isw_title_paid">Paid</string>
    <string name="isw_title_failed">Failed</string>
    <string name="isw_title_select_account">Select Account</string>
    <string name="isw_title_continue">Continue</string>
    <string name="isw_title_lock_device">Lock Device</string>
    <string name="isw_drawer_close">open</string>
    <string name="isw_drawer_open">close</string>
    <string name="isw_title_try_again">Try Again</string>
    <string name="isw_title_cancel">Cancel</string>
    <string name="isw_hint_insert_card">Insert Card</string>
    <string name="isw_title_transaction_failed">Transaction Failed</string>
    <string name="isw_title_processing_transaction">Processing Transaction</string>
    <string name="isw_hint_input_pin">Input your PIN</string>
    <string name="isw_action_pay">Pay</string>
    <string name="isw_hint_print_qr_code">PRINT QR CODE</string>
    <string name="isw_title_email_receipt">Email Receipt</string>
    <string name="isw_hint_scan_code">Scan Code</string>
    <string name="isw_message_camera_permission">You need to grant access to camera to allow the app scan the Code.
    </string>
    <string name="isw_hint_print_ussd">PRINT USSD</string>
    <string name="isw_title_confirm_payment">CONFIRM PAYMENT</string>
    <string name="isw_yes">Yes</string>
    <string name="isw_no">No</string>
    <string name="isw_hint_select_customer_s_preferred_payment_option">Select Customer\'s Preferred Payment Option
    </string>
    <string name="isw_hint_select_bank_hint">Select Customer\'s Preferred Bank</string>
    <string name="isw_hint_enter_ussd_code">Enter this code: %1$s to pay using your mobile banking app or Quickteller
    </string>
    <string name="isw_ussd_code_hint_text">%s \n %s \n Customers should dial the USSD</string>
    <string name="isw_title_confirmation_in_progress">Sending and Receiving</string>
    <string name="isw_action_change">Change</string>
    <string name="isw_hint_default_account">Default</string>
    <string name="isw_title_re_print_receipt">Re-Print Receipt</string>
    <string name="isw_email_end_point">https://api.sendgrid.com/v3/</string>
    <string name="isw_hint_select_a_date">Select a date</string>
    <string name="isw_no_report">No Results for: %1$s</string>
    <string name="isw_terminal_config">Terminal Config</string>
    <string name="isw_sdk_config">SDK Config</string>
    <string name="isw_smartpos">Smart
        <b>POS</b>
    </string>
    <string name="isw_get_started">GET STARTED</string>
    <string name="isw_skip">SKIP</string>
    <string name="isw_skip_fingerprint">SKIP FINGERPRINT</string>
    <string name="isw_link_fingerprint">LINK FINGERPRINT</string>
    <string name="isw_transaction">Transaction</string>
    <string name="isw_report">Report</string>
    <string name="isw_activity">Activity</string>
    <string name="isw_settings">Settings</string>
    <string name="isw_cash_out_pay">Cash Out Pay</string>
    <string name="isw_cash_out_inquiry">Cash Out Inquiry</string>
    <string name="isw_account">Account</string>
    <string name="isw_account_sub_text">Profile, Passcode, Fingerprint</string>
    <string name="isw_customization">Customization</string>
    <string name="isw_customization_sub_text">Colors, icons</string>
    <string name="isw_help">Help</string>
    <string name="isw_help_sub_text">FAQ, About SmartPOS, Contact us.</string>
    <string name="isw_profile_details">Profile details</string>
    <string name="isw_passcode">Passcode</string>
    <string name="isw_fingerprint">Fingerprint</string>
    <string name="isw_enable_card_not_present">Enable card not present</string>
    <string name="isw_sample_text">Lorem ipsum dolor</string>
    <string name="isw_make_a_cash_withdrawal_from_this_terminal">Make a cash withdrawal from this terminal</string>
    <string name="isw_transfer_funds_from_one_account_to_another">Transfer, eCash, eChange, and Raise a Dispute</string>
    <string name="isw_transfer_money">Transfer Money</string>
    <string name="isw_bill_payment">Bill Payment</string>
    <string name="isw_airtime">Airtime</string>
    <string name="isw_data">Mobile Data</string>
    <string name="isw_utility_bills">Utility Bills</string>
    <string name="isw_cable_tv">Cable Tv</string>
    <string name="isw_pay_for_electricity_toll_tax_and_other_bills">Pay for electricity, toll, tax and other bills
    </string>
    <string name="isw_purchase">Purchase</string>
    <string name="isw_pre_authorization">Pre-Authorization</string>
    <string name="isw_card_not_present">Card Not Present</string>
    <string name="isw_completion">Completion</string>
    <string name="isw_enter_amount">Enter Amount</string>
    <string name="isw_login_access">Login Access</string>
    <string name="isw_login_access_sub_text">Enable POS to login using Fingerprint</string>
    <string name="isw_enable_refund_label">Enable Refund</string>
    <string name="isw_enable_refund_sub_text">Enable Fingerprint access when doing a transaction refund</string>
    <string name="isw_enable_contactless_label">Enable Contacless</string>
    <string name="isw_enable_contactless_sub_text">Authorize contactless transaction with Fingerprint</string>
    <string name="isw_date_text">Monday, July 2019</string>
    <string name="isw_proceed">PROCEED</string>
    <string name="isw_ussd">USSD</string>
    <string name="isw_pay_code">Pay Code</string>
    <string name="isw_qr_code">QR Code</string>
    <string name="isw_card_payment">Card Payment</string>
    <string name="isw_make_payment">Make Payment</string>
    <string name="isw_make_bill_payment">Make Bill Payment</string>
    <string name="isw_payment_sub_text">Pay for items purchased</string>
    <string name="isw_default_account">Default Account</string>
    <string name="isw_savings_account">Savings Account</string>
    <string name="isw_current_account">Current Account</string>
    <string name="isw_select_account_type">Select Account Type</string>
    <string name="isw_enter">ENTER</string>
    <string name="isw_status">Status</string>
    <string name="isw_processing_transaction">Processing %s</string>
    <string name="isw_share_receipt">Share Receipt</string>
    <string name="isw_pre_authorize">Pre-Authorization</string>
    <string name="isw_refund">Refund</string>
    <string name="isw_reversal">Reversal</string>
    <string name="isw_pre_authorization_completed">Pre-Authorization Completed!</string>
    <string name="isw_thank_you">Thank You!</string>
    <string name="isw_transfer_completed">Transfer Completed!!!</string>
    <string name="isw_admin_access_required">Admin access required</string>
    <string name="isw_loading_card_details">Loading Card Details…</string>
    <string name="isw_capture">Capture</string>
    <string name="isw_place_your_fingerprint_on_the_sensor_and_press_capture">Place your fingerprint on the sensor\nand press capture</string>
    <string name="isw_fingerprint_for_smartpos">Fingerprint for SmartPOS</string>
    <string name="isw_customer_name">Customer Name</string>
    <string name="isw_transaction_id">Transaction ID</string>
    <string name="isw_issue_type">Issue Type</string>
    <string name="isw_resolution_status">Resolution Status</string>
    <string name="isw_pin_set">Pin Set</string>
</resources>