<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/iswTextColorSecondary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="@dimen/isw_content_padding"
        android:paddingBottom="@dimen/isw_content_padding"
        android:scaleType="fitStart"
        android:src="@drawable/isw_ic_app_logo"
        android:tint="@android:color/white"
        android:background="@color/iswTextColorSecondaryDark"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ISW.MenuItem"
        android:text="@string/isw_label_menu"
        android:textSize="14sp"
        android:textColor="@color/iswTextColorSecondaryLight"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/iswTextColorSecondaryLight" />

    <TextView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ISW.MenuItem"
        android:text="@string/isw_title_history"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ISW.MenuItem"
        android:text="@string/isw_title_reports"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ISW.MenuItem"
        android:text="@string/isw_title_setting"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/merchantInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ISW.MenuItem"
        android:text="@string/isw_title_merchant_info"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ISW.MenuItem"
        android:text="@string/isw_title_help"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>