<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/isw_bg_underline_primary_light"
        android:padding="@dimen/isw_content_padding">

        <TextView
            android:id="@+id/currencySymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/isw_bg_primary_light"
            android:padding="2dp"
            tools:text="@string/isw_currency_naira"
            android:textColor="@color/iswTextColorSecondaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isw_dummy_price"
            android:textColor="@color/iswTextColorSecondaryDark"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/paymentHint"
        style="@style/ISW.Hint"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/isw_pay_ussd_instruction"
        />


</LinearLayout>
