<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/isw_textview7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                android:text="@string/isw_customer_name"
                android:textColor="@color/iswColorLightBlue"/>

            <TextView
                    android:id="@+id/isw_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/isw_font16"
                android:text="Njoku Davies"
                    android:textColor="@color/iswTextColorBlack"/>

            <TextView
                    android:id="@+id/isw_textview71"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/isw_transaction_id"
                    android:textColor="@color/iswColorLightBlue"/>

            <TextView
                    android:id="@+id/isw_transaction_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/isw_font16"
                android:text="ISW49593949"
                    android:textColor="@color/iswTextColorBlack"/>

            <TextView
                    android:id="@+id/isw_textview74"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isw_issue_type"
                android:textColor="@color/iswColorLightBlue"/>


            <TextView
                    android:id="@+id/isw_issue_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/isw_font16"
                android:text="TransactionTimeout"
                    android:textColor="@color/iswTextColorBlack"/>


            <TextView
                    android:id="@+id/isw_textview78"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/isw_resolution_status"
                android:textColor="@color/iswColorLightBlue"/>

            <TextView
                    android:id="@+id/isw_resolution_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/isw_font16"
                android:text="Resolved"
                    android:textColor="@color/iswTextColorBlack"/>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>