<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/isw_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/isw_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/isw_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/isw_guideline" />

    <ImageView
        android:id="@+id/isw_admin_fingerprint"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_fingerprint_not_detected"
        app:layout_constraintBottom_toTopOf="@+id/isw_capture_fingerprint"
        app:layout_constraintEnd_toStartOf="@+id/isw_guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/isw_guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/isw_capture_fingerprint"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:visibility="gone"
        android:text="@string/isw_capture"
        app:layout_constraintBottom_toTopOf="@+id/isw_textview13"
        app:layout_constraintEnd_toStartOf="@+id/isw_guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/isw_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/isw_admin_fingerprint"
        app:strokeColor="@color/iswColorPrimary" />

    <TextView
        android:id="@+id/isw_textview12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/isw_fingerprint_for_smartpos"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/isw_guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/isw_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/isw_textview13" />

    <TextView
        android:id="@+id/isw_textview13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/isw_place_your_fingerprint_on_the_sensor_and_press_capture"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/isw_textview12"
        app:layout_constraintEnd_toStartOf="@+id/isw_guideline3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/isw_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/isw_capture_fingerprint" />

</androidx.constraintlayout.widget.ConstraintLayout>
